--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -48,26 +48,44 @@
                     </div>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover table-borderless">
-                            <thead>
-                                <tr>
-                                    <th>
-                                        Steps
-                                    </th>
-                                    <th>
-                                        Date Submitted
-                                    </th>
-                                </tr>
-                            </thead>
+                            @*<thead>
+                                    <tr>
+                                        <th>
+                                            Steps
+                                        </th>
+                                        <th>
+                                            Date Submitted
+                                        </th>
+                                        <th>
+                                            Journey
+                                        </th>
+                                        <th>
+                                            Actions
+                                        </th>
+                                    </tr>
+                                </thead>*@
                             <tbody>
                                 @{
                                     foreach (var entry in Model)
                                     {
                                         <tr>
                                             <td>
-                                                @entry?.Steps.ToString("N0")
+                                                @entry?.Steps.ToString("N0") Steps
                                             </td>
                                             <td>
                                                 @entry?.Created
+                                            </td>
+                                            <td>
+                                                <a class="btn btn-primary" href="/@entry.JourneyName">
+                                                    @entry?.JourneyName
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <form asp-action="RemoveSteps" asp-route-journeyName="@entry?.JourneyName" asp-route-entryId="@entry?.EntryId">
+                                                    <button type="submit" class="btn btn-danger">
+                                                        Delete
+                                                    </button>
+                                                </form>
                                             </td>
                                         </tr>
                                     }
@@ -79,7 +97,4 @@
             </div>
         }
     }
-    <a class="btn btn-primary btn-lg" asp-action="Index">
-        Return to the Map
-    </a>
 </div>
