--- a/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
@@ -36,7 +36,25 @@
                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" id="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <p id="progresslabel" class="text-center"></p>
-            <form asp-action="AddSteps">
+            <form method="post">
+                @{
+                    if (!(string.IsNullOrWhiteSpace(Model.JourneyName)))
+                    {
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Journey Name</label>
+                            <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey" value="@Model?.JourneyName" readonly>
+                            @*<small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>*@
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Journey Name</label>
+                            <input type="text" name="journeyName" class="form-control" id="journeyName" aria-describedby="journeyName" placeholder="Enter a Name for this Journey">
+                            <small id="emailHelp" class="form-text text-muted">What does your team call this event?</small>
+                        </div>
+                    }
+                }
                 <div class="form-group">
                     <label for="exampleInputEmail1">Work Email Address</label>
                     <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" value="@Model?.Step?.Email">
@@ -50,7 +68,7 @@
                     <input type="number" id="stepsInRoute" name="stepsInRoute" hidden />
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-primary btn-lg" asp-action="AddSteps">🚀 Submit</button>
+                    <button type="submit" class="btn btn-primary btn-lg" asp-action="AddSteps" asp-route-journeyName="@Model?.JourneyName">🚀 Submit</button>
                     <a class="btn btn-info btn-lg" href="https://github.com/uncheckederror/Ocean2Ocean" target="_blank">👓 Github</a>
                 </div>
             </form>
@@ -1271,7 +1289,7 @@
     var progressbarWidth = Math.round((stepsTaken / totalSteps) * 100);
     console.log(progressbarWidth);
     document.getElementById("progressbar").style.width = progressbarWidth + "%";
-    document.getElementById("progresslabel").innerHTML += "~" + progressbarWidth + "% Complete";
+    document.getElementById("progresslabel").innerHTML += "~" + progressbarWidth + "% Complete &#8226; " + addCommas(stepsTaken) + " Steps";
 
     // Create a GeoJSON source with an empty lineString.
     var geojson = {
