--- a/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
@@ -70,6 +70,7 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-lg" asp-action="AddSteps" asp-route-journeyName="@Model?.JourneyName">🚀 Submit</button>
                     <a class="btn btn-info btn-lg" href="https://github.com/uncheckederror/Ocean2Ocean" target="_blank">👓 Github</a>
+                    <button type="button" id="zoomto" class="btn btn-success btn-lg">🌠 Traveled</button>
                 </div>
             </form>
         </div>
@@ -1291,20 +1292,6 @@
     document.getElementById("progressbar").style.width = progressbarWidth + "%";
     document.getElementById("progresslabel").innerHTML += "~" + progressbarWidth + "% Complete &#8226; " + addCommas(stepsTaken) + " Steps";
 
-    // Create a GeoJSON source with an empty lineString.
-    var geojson = {
-        'type': 'FeatureCollection',
-        'features': [
-            {
-                'type': 'Feature',
-                'geometry': {
-                    'type': 'LineString',
-                    'coordinates': [[0, 0]]
-                }
-            }
-        ]
-    };
-
     map.on('load', function () {
 
         map.addSource('routeTraveled', {
@@ -1392,5 +1379,25 @@
                 });
             }
         );
+
+        document.getElementById('zoomto').addEventListener('click', function () {
+            // Geographic coordinates of the LineString
+            var coordinates = routeTraveled.geometry.coordinates;
+
+            // Pass the first coordinates in the LineString to `lngLatBounds` &
+            // wrap each coordinate pair in `extend` to include them in the bounds
+            // result. A variation of this technique could be applied to zooming
+            // to the bounds of multiple Points or Polygon geomteries - it just
+            // requires wrapping all the coordinates with the extend method.
+            var bounds = coordinates.reduce(function (bounds, coord) {
+                return bounds.extend(coord);
+            }, new mapboxgl.LngLatBounds(coordinates[0], coordinates[0]));
+
+            console.log(bounds)
+
+            map.fitBounds(bounds, {
+                padding: 200
+            });
+        });
     });
 </script>
