Improved the performance of the geometery on the map page and added a daily goals system.

--- a/Ocean2Ocean.Mvc/Views/Home/Journeys.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Journeys.cshtml
@@ -30,7 +30,7 @@
                                                 @journey.JourneyName
                                             </td>
                                             <td>
-                                                @journey.StepsTaken
+                                                @journey.StepsTaken Steps
                                             </td>
                                             <td>
                                                 <a class="btn btn-primary" href="/@journey.JourneyName">
