--- a/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/AddSteps.cshtml
@@ -32,6 +32,7 @@
             </div>
         </div>*@
     @{
+        int dailyGoal = 5000;
         if (Model != null && Model.Any())
         {
             <div class="row">
@@ -44,7 +45,7 @@
             <div class="row">
                 <div class="col">
                     <div class="alert alert-success mt-3" role="alert">
-                        You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far!
+                        You've contributed <strong>@Model?.Sum(x => x.Steps).ToString("N0")</strong> Steps to @Model?.FirstOrDefault()?.JourneyName's Journey so far! And earned ⭐ x @Model?.Count(x => x.Steps >= dailyGoal).
                     </div>
                     <div class="table-responsive">
                         <table class="table table-striped table-hover table-borderless">
@@ -66,11 +67,24 @@
                                 </thead>*@
                             <tbody>
                                 @{
+                                    int stars = 0;
                                     foreach (var entry in Model)
                                     {
                                         <tr>
                                             <td>
-                                                @entry?.Steps.ToString("N0") Steps
+                                                @{
+                                                    string formattedSteps = string.Empty;
+                                                    if (entry?.Steps >= dailyGoal)
+                                                    {
+                                                        stars++;
+                                                        formattedSteps = $"⭐ {entry?.Steps.ToString("N0")} Steps";
+                                                    }
+                                                    else
+                                                    {
+                                                        formattedSteps = $"{entry?.Steps.ToString("N0")} Steps";
+                                                    }
+                                                }
+                                                @formattedSteps
                                             </td>
                                             <td>
                                                 @entry?.Created
