--- a/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
+++ b/Ocean2Ocean.Mvc/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                 <div class="progress-bar progress-bar-striped bg-success" role="progressbar" id="progressbar" aria-valuenow="42" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <p id="progresslabel" class="text-center"></p>
-            <form method="post">
+            <form method="get" autocomplete="on">
                 @{
                     if (!(string.IsNullOrWhiteSpace(Model.JourneyName)))
                     {
@@ -74,7 +74,7 @@
                     <div class="col">
                         <label for="dailyGoal">⭐ Daily Goal</label>
                         <input type="number" name="steps" class="form-control" id="dailyGoal" value="5000" readonly>
-                        <small id="dailyGoalHelp" class="form-text text-muted">Meet this goal for a reward!</small>
+                        <small id="dailyGoalHelp" class="form-text text-muted">Meet this goal to win a star!</small>
                     </div>
                 </div>
                 <div class="form-group">
